--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -177,7 +177,24 @@
     <p><a href="/projects/">Go back to Projects</a></p>
   </div>
 </div>
+  <!-- Third Modal Trigger Button -->
+<button class="button" id="openModalBtn-3">もう一度！</button>
 
+<!-- Third Modal -->
+<div class="modal" id="modal-3">
+  <div class="modal-content">
+    <button class="close-btn" id="closeModalBtn-3">&times;</button>
+    <h2>Modal #3</h2>
+    <p>またびっくりしました！</p>
+    
+    <!-- Add image inside the modal -->
+    <figure class="modal-image">
+      <figcaption>今度はピカチュウです！!</figcaption>
+      <img src="/img/SweatPikachu.jpeg" alt="Pikachu" />
+    </figure>
+    <p><a href="/projects/">Go back to Projects</a></p>
+  </div>
+</div>
       <section>
         <h2>次にどうなるかな？</h2>
         <ul>
