--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -142,6 +142,9 @@
     <img src="/img/Rowlet2.jpeg" alt="Experiment 1 screenshot" loading="lazy" />
   </figure>
 </section>
+      <!-- Modal Open Buttons -->
+<div class="modal-buttons-container">
+
 <!-- First Modal Trigger Button -->
 <button class="button" id="openModalBtn-1">Click Here</button>
 
@@ -190,6 +193,7 @@
     <p><a href="/projects/">Go back to Projects</a></p>
   </div>
 </div>
+      </div>
       
       <section>
         <h2>Challenges</h2>
