--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -146,6 +146,8 @@
     <img src="/img/Rowlet2.jpeg" alt="Experiment 2 screenshot" loading="lazy" />
   </figure>
 </section>
+<!-- Modal Open Buttons -->
+<div class="modal-buttons-container">
 
       <!-- First Modal Trigger Button -->
 <button class="button" id="openModalBtn-1">ここをクリックしてください。</button>
@@ -195,6 +197,7 @@
     <p><a href="/projects/">Go back to Projects</a></p>
   </div>
 </div>
+  </div>
       <section>
         <h2>次にどうなるかな？</h2>
         <ul>
