--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -164,8 +164,8 @@
 <div class="modal" id="modal-2">
   <div class="modal-content">
     <button class="close-btn" id="closeModalBtn-2">&times;</button>
-    <h2>Modal Title</h2>
-    <p>SURPRISE!</p>
+    <h2>SURPRISE!</h2>
+    <p>You surprised poor Rowlet!</p>
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
@@ -182,8 +182,8 @@
 <div class="modal" id="modal-3">
   <div class="modal-content">
     <button class="close-btn" id="closeModalBtn-3">&times;</button>
-    <h2>Modal #3</h2>
-    <p>Yet another surprise!</p>
+    <h2>Yet another surprise!</h2>
+    <p>This time, it's Pikachu!</p>
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
