--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -168,8 +168,8 @@
 <div class="modal" id="modal-2">
   <div class="modal-content">
     <button class="close-btn" id="closeModalBtn-2">&times;</button>
-    <h2>Modal Title</h2>
-    <p>捕まえた！</p>
+    <h2>捕まえた！</h2>
+    <p>可哀相なモクローが驚された！</p>
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
