--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -169,7 +169,7 @@
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
-      <figcaption>You surprised poor Rowlet!</figcaption>
+      <figcaption>Row?!</figcaption>
       <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
     </figure>
     <p><a href="/projects/">Go back to Projects</a></p>
@@ -187,7 +187,7 @@
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
-      <figcaption>This time, it's Pikachu!</figcaption>
+      <figcaption>Pika...?</figcaption>
       <img src="/img/SweatPikachu.jpeg" alt="Pikachu" />
     </figure>
     <p><a href="/projects/">Go back to Projects</a></p>
