--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -173,7 +173,7 @@
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
-      <figcaption>可哀相なモクローが驚された！</figcaption>
+      <figcaption>モク？！</figcaption>
       <img src="/img/SurprisedRowlet.jpeg" alt="Rowlet" />
     </figure>
     <p><a href="/projects/">Go back to Projects</a></p>
@@ -186,12 +186,12 @@
 <div class="modal" id="modal-3">
   <div class="modal-content">
     <button class="close-btn" id="closeModalBtn-3">&times;</button>
-    <h2>Modal #3</h2>
-    <p>またびっくりしました！</p>
+    <h2>またびっくりしました！</h2>
+    <p>今度はピカチュウです！!</p>
     
     <!-- Add image inside the modal -->
     <figure class="modal-image">
-      <figcaption>今度はピカチュウです！!</figcaption>
+      <figcaption>ピカ…？</figcaption>
       <img src="/img/SweatPikachu.jpeg" alt="Pikachu" />
     </figure>
     <p><a href="/projects/">Go back to Projects</a></p>
