--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -180,7 +180,7 @@
   </div>
 </div>
   <!-- Third Modal Trigger Button -->
-<button class="button" id="openModalBtn-3">もう一度！</button>
+<button class="button" id="openModalBtn-3">もう一回！</button>
 
 <!-- Third Modal -->
 <div class="modal" id="modal-3">
