--- a/projects/index.html
+++ b/projects/index.html
@@ -29,7 +29,13 @@
   <p>日本語ページとリンク設計の検証。</p>
   <p class="tag">HTML/CSS</p>
 </a>
- 
+        
+        <a class="card" href="/projects/prototype-1.html">
+  <img class="card-thumb" src="/img/Rowlet2.jpeg" alt="Prototype 1 screenshot" loading="lazy" />
+  <h3>Prototype 1</h3>
+  <p>Coming Soon.</p>
+  <p class="tag">HTML/CSS</p>
+</a>
       </div>
     </main>
 
