--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -218,6 +218,7 @@
   <div id="content-3" class="tab-panel" hidden>
     <h2>Implications</h2>
     <p>AI has revolutionized the way things work. However, this doesn't mean humans are now redundant. If anything, we can give the more mundane and routine tasks (such as producing code) to AI, while we focus on creativity and...uh, Pokemon?</p>
+  <img src="/img/HappyRowlet.jpeg" alt="Rowlet" />
   </div>
 </div>
 
