--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/projects/components/accordion/accordion.css" />
     <link rel="stylesheet" href="/projects/components/text-image/text-image.css" />
     <link rel="stylesheet" href="/projects/components/modal/modal.css" />
+    <link rel="stylesheet" href="/projects/components/tabs/tabs.css" />
   </head>
 
   <body>
@@ -198,6 +199,8 @@
   </div>
 </div>
   </div>
+
+      
       <section>
         <h2>次にどうなるかな？</h2>
         <ul>
@@ -220,5 +223,6 @@
     <script src="/projects/components/carousel/carousel.js"></script>
     <script src="/projects/components/accordion/accordion.js"></script>
     <script src="/projects/components/modal/modal.js"></script>
+    <script src="/projects/components/tabs/tabs.js"></script>
   </body>
 </html>
