--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -200,6 +200,31 @@
 </div>
   </div>
 
+      <!-- Tab buttons -->
+<div class="tabs">
+  <button class="tab-button" id="tab-1">秘密です。</button>
+  <button class="tab-button" id="tab-2">それで？</button>
+  <button class="tab-button" id="tab-3">What now?</button>
+</div>
+
+<!-- Tab content -->
+<div class="tab-content">
+  <div id="content-1" class="tab-panel">
+    <h2>秘密</h2>
+    <p>ここにある全てのHTML、CSS、JavaScriptは全部ChatGPTが作った。</p>
+  </div>
+
+  <div id="content-2" class="tab-panel" hidden>
+    <h2>それで？</h2>
+    <p>日本文学の専門の僕でも、ウェブサイトが作れます。コーディングの知識を持ってませんのに、コンピューター科学を勉強しなかったのに、それでも、なんとか簡単なページを作ることができるようになりました。</p>
+  </div>
+
+  <div id="content-3" class="tab-panel" hidden>
+    <h2>Implications</h2>
+    <p>AIはこの社会に革命的な改正があります。でも、人類を完全に切り替える訳でもありません。ただ、AIはつまらなくて、辛い仕事を担当出来て、人間の僕達は、創造的なことを集中するようになってきます。そして、ポケモンと遊ぶ機会もどんどんと増えてきます。</p>
+  <img src="/img/HappyRowlet.jpeg" alt="Rowlet" />
+  </div>
+</div>
       
       <section>
         <h2>次にどうなるかな？</h2>
