--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -204,7 +204,7 @@
 <div class="tabs">
   <button class="tab-button" id="tab-1">秘密です。</button>
   <button class="tab-button" id="tab-2">それで？</button>
-  <button class="tab-button" id="tab-3">What now?</button>
+  <button class="tab-button" id="tab-3">今はどうなりますか？</button>
 </div>
 
 <!-- Tab content -->
@@ -220,7 +220,7 @@
   </div>
 
   <div id="content-3" class="tab-panel" hidden>
-    <h2>Implications</h2>
+    <h2>どうなりますか？</h2>
     <p>AIはこの社会に革命的な改正があります。でも、人類を完全に切り替える訳でもありません。ただ、AIはつまらなくて、辛い仕事を担当出来て、人間の僕達は、創造的なことを集中するようになってきます。そして、ポケモンと遊ぶ機会もどんどんと増えてきます。</p>
   <img src="/img/HappyRowlet.jpeg" alt="Rowlet" />
   </div>
