--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -216,12 +216,12 @@
 
   <div id="content-2" class="tab-panel" hidden>
     <h2>それで？</h2>
-    <p>日本文学の専門の僕でも、ウェブサイトが作れます。コーディングの知識を持ってませんのに、コンピューター科学を勉強しなかったのに、それでも、なんとか簡単なページを作ることができるようになりました。</p>
+    <p>日本文学を専攻している僕のような人間でも、コーディングの知識がなく、コンピューター科学を学んでいなくても、こんな簡単なページを作れるようになったということです。</p>
   </div>
 
   <div id="content-3" class="tab-panel" hidden>
     <h2>どうなりますか？</h2>
-    <p>AIはこの社会に革命的な改正があります。でも、人類を完全に切り替える訳でもありません。ただ、AIはつまらなくて、辛い仕事を担当出来て、人間の僕達は、創造的なことを集中するようになってきます。そして、ポケモンと遊ぶ機会もどんどんと増えてきます。</p>
+    <p>AIは物事の進め方に革命をもたらしました。しかし、だからといって人間が不要になったわけではありません。むしろ、僕達はAIに退屈で繰り返しの仕事（例えば、コードを書くこと）を任せ、その間に創造的なことに集中することができるようになります。そして、ポケモンを遊ぶ機会も増えていくかもしれませんね。</p>
   <img src="/img/HappyRowlet.jpeg" alt="Rowlet" />
   </div>
 </div>
