--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/projects/components/text-image/text-image.css" />
     <link rel="stylesheet" href="/projects/components/modal/modal.css" />
     <link rel="stylesheet" href="/projects/components/tabs/tabs.css" />
+    <link rel="stylesheet" href="/projects/components/translate/translate.css" />
   </head>
 
   <body>
@@ -222,6 +223,56 @@
   </div>
 </div>
 
+      <section class="translate-demo">
+  <h2>Translation Experiment (EN ⇄ JA)</h2>
+  <p class="lead">
+    This experiment integrates a Cloudflare Worker–backed translation API.
+    If the demo does not return results, it is due to API billing constraints,
+    not the absence of implementation.
+  </p>
+
+  <section class="translate" aria-label="Translator">
+    <label class="translate-label" for="sourceText">Text</label>
+    <textarea
+      id="sourceText"
+      class="translate-input"
+      rows="6"
+      placeholder="Type English or Japanese here"
+    ></textarea>
+
+    <div class="translate-controls">
+      <button class="button secondary" type="button" id="swapBtn">
+        Swap EN ⇄ JA
+      </button>
+
+      <select id="mode" class="translate-select">
+        <option value="auto">Auto detect</option>
+        <option value="en2ja">English → Japanese</option>
+        <option value="ja2en">Japanese → English</option>
+      </select>
+
+      <button class="button" type="button" id="translateBtn">
+        Translate
+      </button>
+    </div>
+
+    <label class="translate-label" for="resultText">Result</label>
+    <textarea
+      id="resultText"
+      class="translate-output"
+      rows="6"
+      readonly
+      placeholder="Translation output"
+    ></textarea>
+
+    <p class="translate-status" id="status" aria-live="polite"></p>
+  </section>
+</section>
+      <p class="note">
+  This demo uses a live AI translation API via a Cloudflare Worker.
+  Availability depends on API billing status. Unfortunately, I am unable to afford it at the moment.
+</p>
+
       <section>
         <h2>Challenges</h2>
         <ul>
@@ -253,5 +304,6 @@
     <script src="/projects/components/accordion/accordion.js"></script>
     <script src="/projects/components/modal/modal.js"></script>
     <script src="/projects/components/tabs/tabs.js"></script>
+    <script src="/projects/components/translate/translate.js"></script>
   </body>
 </html>
