--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -273,6 +273,11 @@
   </section>
 </section>
 
+      <p class="note">
+このデモでは、Cloudflare Worker を介したライブの AI 翻訳 API を使用しています。
+API の利用は課金状況に依存するため、現在は費用の都合によりご利用いただけません。
+</p>
+
       <section>
         <h2>次にどうなるかな？</h2>
         <ul>
