--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -228,11 +228,10 @@
 </div>
 
       <section class="translate-demo">
-  <h2>Translation Experiment (EN ⇄ JA)</h2>
+  <h2>翻訳実験（英語 ⇄ 日本語）</h2>
   <p class="lead">
-    This experiment integrates a Cloudflare Worker–backed translation API.
-    If the demo does not return results, it is due to API billing constraints,
-    not the absence of implementation.
+  本実験では Cloudflare Worker を介した翻訳 API を使用しています。
+デモが正常に動作しない場合は、実装上の問題ではなく、API の課金状況による制限が原因です。
   </p>
 
   <section class="translate" aria-label="Translator">
