--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -259,7 +259,7 @@
       </button>
     </div>
 
-    <label class="translate-label" for="resultText">Result</label>
+    <label class="translate-label" for="resultText">結果</label>
     <textarea
       id="resultText"
       class="translate-output"
