--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -265,7 +265,7 @@
       class="translate-output"
       rows="6"
       readonly
-      placeholder="翻訳成果"
+      placeholder="翻訳結果"
     ></textarea>
 
     <p class="translate-status" id="status" aria-live="polite"></p>
