--- a/projects/experiment-1.html
+++ b/projects/experiment-1.html
@@ -42,17 +42,27 @@
 
       <section>
   <h2>Weather API Experiment</h2>
-  <p>Good morning! How is the weather today?
+  <p>
+    Good morning! How is the weather today?
   </p>
 
-  <div class="weather-card">
-    <h2>Tokyo</h2>
-    <p class="weather-temp" id="temperature">–</p>
-    <p class="weather-desc" id="description">Loading…</p>
-  </div>
-</section>
+  <section class="weather-card" aria-live="polite">
+    <h2>Weather</h2>
 
-<script src="/projects/components/weather/weather.js"></script>
+    <label for="citySelect">City</label>
+    <select id="citySelect">
+      <option value="tokyo">Tokyo</option>
+      <option value="singapore">Singapore</option>
+      <option value="minneapolis">Minneapolis</option>
+    </select>
+
+    <div class="weather-display">
+      <div class="weather-icon" id="icon">⛅</div>
+      <p class="weather-temp" id="temperature">–</p>
+      <p class="weather-desc" id="description">Loading…</p>
+    </div>
+  </section>
+</section>
 
       <section>
         <h2>Aims</h2>
