--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -53,7 +53,7 @@
     <select id="citySelect">
       <option value="tokyo">東京</option>
       <option value="singapore">シンガポール</option>
-      <option value="minneapolis">ミニエアポリス</option>
+      <option value="minneapolis">ミニアポリス</option>
     </select>
 
     <div class="weather-display">
