--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -47,9 +47,9 @@
   </p>
 
   <section class="weather-card" aria-live="polite">
-    <h2>Weather</h2>
+    <h2>天気</h2>
 
-    <label for="citySelect">City</label>
+    <label for="citySelect">町</label>
     <select id="citySelect">
       <option value="tokyo">東京</option>
       <option value="singapore">シンガポール</option>
