--- a/projects/experiment-2.html
+++ b/projects/experiment-2.html
@@ -49,7 +49,7 @@
   <section class="weather-card" aria-live="polite">
     <h2>天気</h2>
 
-    <label for="citySelect">町</label>
+    <label for="citySelect">都市</label>
     <select id="citySelect">
       <option value="tokyo">東京</option>
       <option value="singapore">シンガポール</option>
