--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </p>
           </a>
 
-          <a class="card" href="#" aria-label="Prototype 1">
+          <a class="card" href="/projects/prototype.html">
             <h3>Prototype 1</h3>
             <p>
-              This is a prototype website, maybe. Nothing to do with the game where you play as a superpowered mutant.
+              This is a prototype website where I attempt to replicate my blog from scratch. Nothing to do with the game where you play as a superpowered mutant.
             </p>
           </a>
 
