--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </p>
           </a>
 
-          <a class="card" href="/projects/prototype.html">
+          <a class="card" href="/projects/prototype/">
             <h3>Prototype 1</h3>
             <p>
               This is a prototype website where I attempt to replicate my blog from scratch. Nothing to do with the game where you play as a superpowered mutant.
