--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
   <p class="tag">HTML/CSS</p>
 </a>
         
-        <a class="card" href="/projects/prototype-1.html">
+        <a class="card" href="/projects/prototype/">
   <img class="card-thumb" src="/img/Rowlet2.jpeg" alt="Prototype 1 screenshot" loading="lazy" />
   <h3>Prototype 1</h3>
   <p>Coming Soon.</p>
