--- a/projects/index.html
+++ b/projects/index.html
@@ -33,7 +33,7 @@
         <a class="card" href="/projects/prototype/">
   <img class="card-thumb" src="/img/Rowlet2.jpeg" alt="Prototype 1 screenshot" loading="lazy" />
   <h3>Prototype 1</h3>
-  <p>Coming Soon.</p>
+  <p>An attempt to replicate my blog from scratch.</p>
   <p class="tag">HTML/CSS</p>
 </a>
       </div>
